01_ec2_rds/04_igw.tf
resource "aws_internet_gateway" "igw_main" {
  vpc_id = "${aws_vpc.vpc_main.id}"
}
